# Gomoku

./: README.md
Gomoku/: CMakeLists.txt  gomoku.cpp  gomoku.h  gomoku.ui  loginwin.cpp  loginwin.h  loginwin.ui  main.cpp  mainwin.cpp  mainwin.h  mainwin.ui  request.cpp  request.h  request.ui  temp.h
server_gomoku/: CMakeLists.txt  main.cpp
